<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_menu_list"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_cart_black_18dp"
        android:title="@string/need_list_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_menu_create"
        android:enabled="true"
        android:icon="@drawable/baseline_add_circle_black_18dp"
        android:title="@string/create_product_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_menu_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_face_black_18dp"
        android:title="@string/profile_title"
        app:showAsAction="ifRoom" />
</menu>